# dapla-jdemetra-desktop

./: .gitignore  Dockerfile  README.md  SECURITY.md  fetch_and_build.sh
.github/workflows/: build-push-release.yml
gcsfuse-token-provider/: README.md  gcsfuse_token_provider.py  pyproject.toml
resources/examples/: ANSATTE_20_jd.xlsx  LEDSTILL_20_jd.xlsx  LSjustering1k15.xlsx
resources/scripts/: onyxia_init.sh  startup.sh
scripts/: startup.sh
